# swaySort

./: .gitignore  README.md  prune_tracks.py  pyproject.toml  requirements.txt
configs/: best_pipeline.json  clips.example.json  clips.remote.example.json
configs/sweeps/: dark_recovery_finalists.json  dark_recovery_v1.json  darktest_push_v1.json  fn_recovery_v1.json  lovetest_fn_finalists.json  lovetest_fn_v1.json  postprocess_v1_baseline.json  rtmw_pose_merge_v1.json  sam_verifier_v1.json  v9_finalists.json  v9_stack_validation.json
docs/: EXPERIMENTS_LOG.md  PIPELINE_SPEC.md
docs/figures/: _mermaid_snippets.md
scripts/: benchmark_trackers.py  eval_per_clip.py  export_yolo_trt.py  generate_comparison_charts.py  regression_check.py  render_side_by_side.py  run_full_benchmark.py  score_runs.py  smoke_test.py  sweep_detector.py  sweep_postprocess.py  sweep_table.py  sync_to_a10.sh
tracking/: __init__.py  bbox_stitch.py  best_pipeline.py  dark_recovery.py  deepocsort_runner.py  fn_recovery.py  multi_scale_detector.py  postprocess.py  rtmw_pose_merge.py  run_pipeline.py  sam2_verifier.py
weights/: README.txt
work/: render_overlays.py  run_all_tests.py
work/benchmarks/: full_a10_results.json  per_clip_idf1.json  per_clip_switch_frames_loveTest.json  tracker_speeds.json
work/comparison_videos/: summary.json
work/regression/: fn_recovery_v1_sweep.json  rtmw_pose_merge_v1_sweep.json
work/research/: novel_strategies.md  rtmw_strategies.md  sam21_strategies.md
work/results/: summary.json  timings.json
work/sweeps/: dark_recovery_finalists_results.json  (+1 more)
(+179 files in other folders)
